@@ -39,72 +39,4 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>copy-dependencies</id>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <!-- This needs to occur before cargo-maven2-plugin starts the Jetty container so we'll map this to the 'package' phase which occurs before 'pre-integration-test'. -->
-                        <phase>package</phase>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}</outputDirectory>
-                            <includeArtifactIds>war</includeArtifactIds>
-                            <!-- Strip the version so we don't have to change the cargo config as the version changes. -->
-                            <stripVersion>true</stripVersion>
-                            <overWriteSnapshots>true</overWriteSnapshots>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.cargo</groupId>
-                <artifactId>cargo-maven2-plugin</artifactId>
-                <configuration>
-                    <container>
-                        <containerId>tomcat6x</containerId>
-                        <home>/Users/ritesh/Documents/apache-tomcat-8.5.23</home>
-                    </container>
-                    <configuration>
-                        <properties>
-                            <!-- uncomment if you want to manually run cargo on port 8080 using mvn cargo:run -->
-                            <cargo.servlet.port>8080</cargo.servlet.port>
-                            <!-- uncomment if you want to debug the locally running instance on port 8787 after using mvn cargo:run -->
-                            <!-- <cargo.jvmargs>-Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=n -Xms512m -Xmx1024m -XX:MaxPermSize=256m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC</cargo.jvmargs> -->
-                            <!-- uncomment all ports when not running locally with mvn cargo:run -->
-                        </properties>
-                    </configuration>
-                    <deployables>
-                        <deployable>
-                            <groupId>${project.groupId}</groupId>
-                            <artifactId>war</artifactId>
-                            <type>war</type>
-                        </deployable>
-                    </deployables>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>start-container</id>
-                        <goals>
-                            <goal>start</goal>
-                        </goals>
-                        <phase>pre-integration-test</phase>
-                    </execution>
-                    <execution>
-                        <id>stop-container</id>
-                        <goals>
-                            <goal>stop</goal>
-                        </goals>
-                        <phase>post-integration-test</phase>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 </project>
